# simple_seed_comp_state_example

./: .gitignore  Cargo.toml  README.md  package.json
configs/: tsconfig.base.json
crate/: Cargo.toml
crate/src/: lib.rs  simple.rs
css/: styles.css
