[package]
version = "0.1.0"
name = "todo_example"
repository = "n/a"
authors = ["rebo"]
description = "todo example using component state"
categories = ["wasm", "rust", "tailwindcss", "seed", "todo", "example"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "^0.2.50" # sync with `wasm-bindgen`

[dependencies]
comp_state = {path = "../../comp_state"}
seed_comp_helpers = {path = "../../seed_comp_helpers"}
enclose = "1.1.8"


# Sync with seed
serde = "1.0.102"
serde_json = "1.0.40"
futures = "^0.1.27"
wasm-bindgen = "^0.2.50" # sync with `wasm-bindgen-test`
seed = "0.4.2"
js-sys = "0.3.27"

[dependencies.web-sys]
version = "^0.3.28"
features = [
  "ScrollToOptions",
  "Navigator",
]

[profile.release]
lto = true
opt-level = 's'
